# 2d-game-dev

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: CommonDefines.h
src/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp  EngineConfigLoader.h
src/engine/config/: EngineConfig.h
src/game/: Game.cpp  Game.h
src/game/board/: ChessBoard.cpp  ChessBoard.h  GameBoardAnimator.cpp  GameBoardAnimator.h  MoveSelector.cpp  MoveSelector.h
src/game/buttons/: WheelButton.cpp  WheelButton.h
src/game/chess_defines/: ChessDefines.h  ChessStructs.h
src/game/chess_pieces/: PieceHandler.cpp  PieceHandler.h  PieceHandlerPopulator.cpp  PieceHandlerPopulator.h
src/game/chess_pieces/types/: ChessPiece.cpp  ChessPiece.h  Pawn.cpp  Pawn.h  Rook.cpp  Rook.h  UnfinishedPiece.cpp  UnfinishedPiece.h
src/game/config/: GameConfig.h
src/game/entities/: Hero.cpp  Hero.h  Wheel.cpp  Wheel.h
src/game/logic/: GameLogic.cpp  GameLogic.h  InputInverter.cpp  InputInverter.h
src/game/panels/: PiecePromotionPanel.cpp  PiecePromotionPanel.h
src/game/panels/buttons/: PiecePromotionButton.cpp  PiecePromotionButton.h
src/game/panels/config/: PiecePromotionButtonCfg.h  PiecePromotionPanelCfg.h
src/game/proxies/: GameBoardProxy.h  GameProxy.h
src/game/utility/: BoardPos.h  BoardUtils.cpp  BoardUtils.h
src/manager_utils/: CMakeLists.txt
src/manager_utils/include/manager_utils/debug/: DebugConsole.h
src/manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
src/manager_utils/include/manager_utils/input/: ButtonBase.h
src/manager_utils/include/manager_utils/managers/: DrawManager.h  ManagerBase.h  ManagerHandler.h  ResourceManager.h  TimerManager.h
src/manager_utils/include/manager_utils/managers/config/: DrawManagerCfg.h  ManagerHandlerCfg.h  ResourceManagerCfg.h
src/manager_utils/include/manager_utils/timer/: TimerClient.h  TimerData.h
src/manager_utils/src/debug/: DebugConsole.cpp
src/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
src/manager_utils/src/input/: ButtonBase.cpp
src/manager_utils/src/managers/: DrawManager.cpp  ManagerHandler.cpp  ResourceManager.cpp  TimerManager.cpp
src/manager_utils/src/timer/: TimerClient.cpp  TimerData.cpp
src/sdl_utils/: CMakeLists.txt  InputEvent.cpp  InputEvent.h  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
src/sdl_utils/containers/: ImageContainer.cpp  ImageContainer.h
src/sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  Texture.h
src/sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
src/sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
src/sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
src/sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
src/utils/: CMakeLists.txt
src/utils/drawing/: DrawParams.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
src/utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
src/utils/include/utils/error/: HandleError.h
src/utils/include/utils/input/: EventDefines.h
src/utils/include/utils/thread/: ThreadUtils.h
src/utils/include/utils/time/: Time.h
src/utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
src/utils/src/thread/: ThreadUtils.cpp
src/utils/src/time/: Time.cpp
src/utils/thread/: ThreadUtils.cpp  ThreadUtils.h
src/utils/time/: Time.cpp  Time.h
